# Refrigerator

./: .gitignore  config.py  main.py  pyproject.toml  read_data.py  readme.md  recommend.py  save_recommend.py
