[tool.poetry]
name = "Refrigerator Project"
version = "0.1.0"
description = "Food Recommend from GPT"
authors = ["heewonKwak (hewo1217@likelion.org)"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
starlette = "^0.31.1"
pandas = "^2.0.3"
pandas-gbq = "^0.19.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''